Allowed test support to be accessed by extensions

--- a/bfvmm/tests/support/CMakeLists.txt
+++ b/bfvmm/tests/support/CMakeLists.txt
@@ -30,3 +30,9 @@ do_test(test_support
     SOURCES arch/intel_x64/test_support.cpp
     ${ARGN}
 )
+
+# ------------------------------------------------------------------------------
+# Install
+# ------------------------------------------------------------------------------
+
+install(DIRECTORY ../../include/support/ DESTINATION include/bfvmm/support)
